[package]
name = "agon-light-emulator-debugger"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
agon-cpu-emulator = { git = "https://github.com/tomm/agon-cpu-emulator.git", rev="cf8cdbc472d8e60352fb5a8500a9b3229ae038bb"}
#agon-cpu-emulator = { path = "../agon-cpu-emulator" }
rustyline = "11.0.0"
