[package]
name = "agon-light-emulator-debugger"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
agon-cpu-emulator = { git = "https://github.com/tomm/agon-cpu-emulator.git", rev="eba993240cbcdb244d9426aad67e1118575a7601"}
#agon-cpu-emulator = { path = "../agon-cpu-emulator" }
rustyline = "11.0.0"
