[package]
name = "agon-light-emulator-debugger"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
agon-cpu-emulator = { git = "https://github.com/tomm/agon-cpu-emulator.git", rev="06aba0a4cba64baebacf883692b9940b1355dc1b"}
#agon-cpu-emulator = { path = "../agon-cpu-emulator" }
rustyline = "12.0.0"
